tests/baselines/reference/project/relativeGlobal/node/relativeGlobal.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
consume.ts(4,18): error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decl.ts (0 errors) ====
    export function call() {
        return "success";    
    }
    export var x = 1;
==== consume.ts (1 errors) ====
    import decl = require("./decl");
    var str = decl.call();
    
    declare function fail();
                     ~~~~
!!! error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.
    
    if(str !== "success") {
        fail();
    }